# winterwallet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: helpers.rs  main.rs  state.rs
cli/src/commands/: close.rs  create.rs  info.rs  init.rs  mod.rs  recover.rs  state.rs  transfer.rs  withdraw.rs
client/: Cargo.toml
client/src/: error.rs  instruction.rs  lib.rs  pda.rs  plan.rs  preimage.rs  state.rs  transaction.rs  wallet.rs
client/tests/: golden.rs  instruction.rs  pda.rs  preimage.rs  regen.rs  state.rs
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  keypair.rs  lib.rs  privkey.rs  pubkey.rs  signature.rs
core/tests/: bip39_vectors.rs  crypto.rs  mnemonic.rs
docs/plans/: 2026-04-27-feat-smoke-test-alt-support-surfpool-integration-plan.md
fixtures/: advance-close.json  advance-token-transfer.json  advance-withdraw.json  initialize.json  signing-session-alt1.json  signing-session.json
program/: Cargo.toml
program/src/: constants.rs  lib.rs  state.rs
program/src/instructions/: advance.rs  close.rs  initialize.rs  mod.rs  withdraw.rs
scripts/: smoke.sh
sdk/ts/: .npmignore  LICENSE  README.md  bun.lockb  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
sdk/ts/src/: account.ts  constants.ts  errors.ts  helpers.ts  index.ts  plan.ts  transaction.ts
sdk/ts/src/instructions/: advance.ts  close.ts  index.ts  initialize.ts  withdraw.ts
sdk/ts/test/: index.test.ts  integration.test.ts
