[workspace]
resolver = "3"
members = ["core", "cli", "program"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
] }

[workspace.dependencies]
winterwallet-core = { path = "core" }
solana-sha256-hasher = { version = "3.1.0", default-features = false }
solana-address = "2.6.0"
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
pinocchio = "0.11.1"
pinocchio-system = "0.6.1"
