[workspace]
resolver = "3"
members = ["common", "core", "client", "cli", "program"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dean Little <hi@deanlittle.com>"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
] }

[workspace.dependencies]
winterwallet-common = { path = "common", version = "0.1.0" }
winterwallet-core = { path = "core", version = "0.1.0" }
winterwallet-client = { path = "client", version = "0.1.0" }
solana-sha256-hasher = { version = "3.1.0", default-features = false }
solana-address = { version = "2.6.0", default-features = false }
solana-instruction = "3.4"
solana-system-interface = "3.2"
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
pinocchio = "0.11.1"
pinocchio-system = "0.6.1"
