[package]
name = "winterwallet-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Off-chain client helpers for the WinterWallet Solana program: instruction builders, PDAs, transaction planning, and wallet state."

[lints]
workspace = true

[lib]

[dependencies]
winterwallet-common = { workspace = true }
winterwallet-core = { workspace = true }
solana-address = { workspace = true, features = ["curve25519"] }
solana-instruction = { workspace = true }
solana-system-interface = { workspace = true }

[dev-dependencies]
serde_json = "1"
solana-sha256-hasher = { workspace = true }
